<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

      

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tVDialogSettingsStatic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_third_filters"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <CheckBox
                android:id="@+id/cBDialogSettingsDom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="true"
                android:text="@string/fragment_third_filter_dom" />

            <CheckBox
                android:id="@+id/cBDialogSettingsMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="true"
                android:text="@string/fragment_third_filter_men" />

            <CheckBox
                android:id="@+id/cBDialogSettingsSC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:checked="true"
                android:text="@string/fragment_third_filter_sc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tVDialogSettingsStatic2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_third_settings"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tVDialogSettingsStatic3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_third_setting_user" />

                <TextView
                    android:id="@+id/tVDialogSettingsUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tVDialogSettingsStatic4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_third_setting_email" />

                <TextView
                    android:id="@+id/tvDialogSettingsEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/btnDialogSettingsLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_third_btn_signout" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>