<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    android:orientation="vertical"
    tools:context="com.exitcode.zagrebstudent.LoginActivity" >

    <Button
        android:id="@+id/btnSignupToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/signup_activity_btn_to_login" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnSignupToLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iVSignupLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/layoutText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iVSignupLogo"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tVSignupStatic1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_activity_username" />

                <EditText
                    android:id="@+id/eTSignupUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tVSignupStatic2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/signup_activity_password" />

                <EditText
                    android:id="@+id/eTSignupPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tVSignupStatic3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/signup_activity_password_again" />

                <EditText
                    android:id="@+id/eTSignupPasswordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/tVSignupStatic4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/signup_activity_email" />

                <EditText
                    android:id="@+id/eTSignupEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignupSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutText"
                android:layout_centerHorizontal="true"
                android:text="@string/signup_activity_btn_signup" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>