<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/iVDialogAboutHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/empty"
            android:src="@drawable/vvg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tVDialogAboutAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/about_dialog_autor" />

            <TextView
                android:id="@+id/tVDialogAboutMentor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/about_dialog_mentor" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>