<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backround"
    android:orientation="vertical"
    tools:context="com.exitcode.zagrebstudent.LoginActivity" >

    <Button
        android:id="@+id/btnLoginToSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/login_activity_btn_to_signup" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/btnLoginToSignup"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iVLoginLogo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/empty"
                android:src="@drawable/logo" />

            <LinearLayout
                android:id="@+id/layoutText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iVLoginLogo"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tVSignupStatic1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_username" />

                <EditText
                    android:id="@+id/eTLoginUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tVStatic2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_activity_password" />

                <EditText
                    android:id="@+id/eTLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/btnLoginLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutText"
                android:layout_centerHorizontal="true"
                android:text="@string/login_activity_btn_login" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>